--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <img src="assets/img/analytics.png"  class="mx-2" width="42">
   <img src="assets/img/pipedrive.png"  class="mx-2" width="60">
   <img src="assets/img/outreach.png"  class="mx-2" width="42">
+  <img src="assets/img/monday.png"  class="mx-2" width="42">
 </div>
 </div>
 
