--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 <div class="alert alert-light" style="opacity: 0.8;" role="alert">
   <a href="https://www.legal.io" target="_blank"><img src="assets/img/legalio.png" class="mr-3 pr-3" height="50" style="border-right: 1px solid lightgray"></a>
   <a href="https://www.gmail.com" target="_blank"><img src="assets/img/gmail.png" class="mr-2" height="48"></a>
-  <img src="assets/img/calendar.png"  class="px-2" height="48">
-  <img src="assets/img/drive.png"  class="px-2" height="48">
-  <img src="assets/img/analytics.png"  class="mx-1 pr-3" height="48"  style="border-right: 1px solid lightgray">
-  <img src="assets/img/pipedrive.png"  class="mr-1" height="48" >
-  <img src="assets/img/outreach.png"  class="mr-1" height="48" >
-  <img src="assets/img/monday.png"  class="" height="48" >
+  <a href="https://calendar.google.com" target="_blank"><img src="assets/img/calendar.png"  class="px-2" height="48"></a>
+  <a href="https://drive.google.com" target="_blank"><img src="assets/img/drive.png"  class="px-2" height="48"><a>
+  <a href="https://analytics.google.com" target="_blank"><img src="assets/img/analytics.png"  class="mx-1 pr-3" height="48"  style="border-right: 1px solid lightgray"></a>
+  <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/pipedrive.png"  class="mr-1" height="48" ></a>
+  <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
+  <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="" height="48" ></a>
 </div>
 </div>
 
