--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   </div>
 
 </div>
-<div class="container-md fixed-bottom" style="max-width:640px;">
-<div class="alert alert-light" style="opacity: 0.8;" role="alert">
+<div class="container-md fixed-bottom" style="max-width:720px;">
+<div class="alert alert-light" style="opacity: 0.9;" role="alert">
   <a href="https://www.legal.io" target="_blank"><img src="assets/img/legalio.png" class="mr-3 pr-3" height="50" style="border-right: 1px solid lightgray"></a>
   <a href="https://www.gmail.com" target="_blank"><img src="assets/img/gmail.png" class="mr-2" height="48"></a>
   <a href="https://calendar.google.com" target="_blank"><img src="assets/img/calendar.png"  class="px-2" height="48"></a>
@@ -53,7 +53,8 @@
   <a href="https://analytics.google.com" target="_blank"><img src="assets/img/analytics.png"  class="mx-1 pr-3" height="48"  style="border-right: 1px solid lightgray"></a>
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/pipedrive.png"  class="mr-1" height="48" ></a>
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
-  <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="" height="48" ></a>
+  <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="mx-1 pr-3" height="48"   style="border-right: 1px solid lightgray"></a>
+  <a href="https://www.monday.com" target="_blank"><img src="assets/img/zen2.png"  class="" height="48" ></a>
 </div>
 </div>
 
