--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>Index</title>
+    <title>Quick Dashboard</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico">
 
     <!-- build:css -->
@@ -54,7 +54,7 @@
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/pipedrive.png"  class="mr-1" height="48" ></a>
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
   <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="mx-1 pr-3" height="48"   style="border-right: 1px solid lightgray"></a>
-  <a href="https://www.monday.com" target="_blank"><img src="assets/img/zen2.png"  class="" height="48" ></a>
+  <a href="https://www.messari.io" target="_blank"><img src="assets/img/messari.png"  class="ml-2" height="44" ></a>
 </div>
 </div>
 
