--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <a href="https://www.messari.io" target="_blank"><img src="assets/img/messari.png"  class="ml-2" height="44" ></a>
 </div>
 </div>
+<div style="position:absolute; bottom: 20px; right:20px;">test</div>
 
 <script>
     document.write("<center><font size=+3 style='color: white;'>");
