--- a/pieter.html
+++ b/pieter.html
@@ -24,7 +24,7 @@
 <div class="d-flex py-5 flex-column" style="height: 100vh;">
   <header class="text-center text-white py-5">
     <h1 class="display-2 font-weight-bold" id="time" style="margin-top: 25vh;">
-    <h1 class="display-4 font-weight-bold"><span id="demo"> </span></h1>
+    <h1 class="display-4 font-weight-bold"><span id="demo"> </span>, Pieter</h1>
   </header>
 
   <div class="text-white">
@@ -44,12 +44,17 @@
   </div>
 
 </div>
-<div class="container-md fixed-bottom" style="max-width:350px;">
-<div class="alert alert-light" style="opacity: 0.8;" role="alert">
+<div class="container-md fixed-bottom" style="max-width:720px;">
+<div class="alert alert-light" style="opacity: 0.9;" role="alert">
+  <a href="https://www.legal.io" target="_blank"><img src="assets/img/legalio.png" class="mr-3 pr-3" height="50" style="border-right: 1px solid lightgray"></a>
   <a href="https://www.gmail.com" target="_blank"><img src="assets/img/gmail.png" class="mr-2" height="48"></a>
   <a href="https://calendar.google.com" target="_blank"><img src="assets/img/calendar.png"  class="px-2" height="48"></a>
   <a href="https://drive.google.com" target="_blank"><img src="assets/img/drive.png"  class="px-2" height="48"><a>
-  <a href="https://analytics.google.com" target="_blank"><img src="assets/img/analytics.png"  class="mx-1 pr-1" height="48" ></a>
+  <a href="https://analytics.google.com" target="_blank"><img src="assets/img/analytics.png"  class="mx-1 pr-3" height="48"  style="border-right: 1px solid lightgray"></a>
+  <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/pipedrive.png"  class="mr-1" height="48" ></a>
+  <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
+  <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="mx-1 pr-3" height="48"   style="border-right: 1px solid lightgray"></a>
+  <a href="https://www.messari.io" target="_blank"><img src="assets/img/messari.png"  class="ml-2" height="44" ></a>
 </div>
 </div>
 <div  style="position:absolute; bottom: 20px; right:20px;"><a href="zen.html" target="_blank" class="text-white">Zen Mode</div>
