--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <!-- endbuild -->      
       
     <link rel="stylesheet" href="assets/css/theme.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159939988-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159939988-1');
+    </script>
 
   </head>
 
