--- a/pieter.html
+++ b/pieter.html
@@ -63,7 +63,7 @@
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/pipedrive.png"  class="mr-1" height="48" ></a>
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
   <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="mx-1 pr-3" height="48"   style="border-right: 1px solid lightgray"></a>
-  <a href="https://www.messari.io" target="_blank"><img src="assets/img/messari.png"  class="ml-2" height="44" ></a>
+  <a href="https://www.taskade.com" target="_blank"><img src="assets/img/taskade.webp"  class="ml-2" height="44" ></a>
 </div>
 </div>
 <div  style="position:absolute; bottom: 20px; right:20px;"><a href="zen.html" target="_blank" class="text-white">Zen Mode</div>
