--- a/pieter.html
+++ b/pieter.html
@@ -61,7 +61,7 @@
   <a href="https://drive.google.com" target="_blank"><img src="assets/img/drive.png"  class="px-2" height="48"><a>
   <a href="https://analytics.google.com" target="_blank"><img src="assets/img/analytics.png"  class="mx-1 pr-3" height="48"  style="border-right: 1px solid lightgray"></a>
   <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/pipedrive.png"  class="mr-1" height="48" ></a>
-  <a href="https://www.pipedrive.com" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
+  <a href="https://www.outreach.io" target="_blank"><img src="assets/img/outreach.png"  class="mr-1" height="48" ></a>
   <a href="https://www.monday.com" target="_blank"><img src="assets/img/monday.png"  class="mx-1 pr-3" height="48"   style="border-right: 1px solid lightgray"></a>
   <a href="https://www.taskade.com" target="_blank"><img src="assets/img/taskade.webp"  class="ml-2" height="44" ></a>
 </div>
